<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_privacy" app:iconSpaceReserved="false">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="location"
        android:title="@string/location"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="third_party"
        android:title="@string/third_party"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="password"
        android:summary="@string/recommended"
        android:title="@string/password"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="do_not_track"
        android:title="@string/do_not_track"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="remove_identifying_headers"
        android:title="@string/remove_identifying_headers"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="webrtc_support"
        android:title="@string/webrtc_support"
        app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_advanced" app:iconSpaceReserved="false">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="clear_cache_exit"
        android:title="@string/cache"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="clear_history_exit"
        android:title="@string/clear_history_exit"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="clear_cookies_exit"
        android:title="@string/clear_cookies_exit"
        app:iconSpaceReserved="false" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="clear_webstorage_exit"
        android:title="@string/clear_web_storage_exit"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="clear_cache"
        android:title="@string/clear_cache"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="clear_history"
        android:title="@string/clear_history"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="clear_cookies"
        android:title="@string/clear_cookies"
        app:iconSpaceReserved="false" />
    <Preference
        android:key="clear_webstorage"
        android:title="@string/clear_web_storage"
        app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>