<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_malware">

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="block_malicious_sites"
        android:title="@string/block_malware"
        app:icon="@drawable/ic_malware" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_adblock">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="cb_block_ads"
            android:summary="@string/recommended"
            android:title="@string/block_ads"
            app:icon="@drawable/ic_block" />

        <Preference
            android:key="preference_hosts_source"
            android:summary="@string/block_source_default"
            android:title="@string/block_ad_source"
            app:icon="@drawable/ic_folder" />

        <Preference
            android:key="preference_hosts_refresh_force"
            android:summary="@string/block_ad_remote_refresh_frequency_description"
            android:title="@string/block_ad_refresh_now"
            app:icon="@drawable/ic_action_refresh" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
