<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_general">

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.GeneralSettingsFragment"
        app:title="@string/settings_general"
        app:icon="@drawable/ic_settings" />

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.DisplaySettingsFragment"
        app:title="@string/settings_display"
        app:icon="@drawable/ic_palette" />

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.BookmarkSettingsFragment"
        app:title="@string/bookmark_settings"
        app:icon="@drawable/ic_bookmark_border" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_security">

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.PrivacySettingsFragment"
        app:title="@string/settings_privacy"
        app:icon="@drawable/ic_security" />

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.AdBlockSettingsFragment"
        app:title="@string/settings_adblock"
        app:icon="@drawable/ic_block" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_other">

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.AppsSettingsFragment"
        app:summary="@string/settings_summary_apps"
        app:title="@string/settings_title_apps"
        app:icon="@drawable/ic_apps" />

    <Preference
        app:fragment="com.jamal2367.styx.settings.fragment.AboutSettingsFragment"
        app:summary="@string/settings_about_explain"
        app:title="@string/settings_about"
        app:icon="@drawable/ic_about" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
