<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_about">

        <Preference
            android:summary="@string/name"
            android:title="@string/developer"
            app:icon="@drawable/ic_dev">
        </Preference>

        <Preference
            android:key="pref_version"
            android:title="@string/version"
            app:icon="@drawable/ic_about">
        </Preference>

        <Preference
            android:key="pref_webview"
            android:title="@string/webview_version"
            app:icon="@drawable/ic_settings">
        </Preference>

        <Preference
            android:summary="@string/pref_report_issue_summary"
            android:title="@string/pref_report_issue_title"
            app:icon="@drawable/ic_github">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/jamal2362/Styx">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/licenses">

        <Preference
            android:summary="@string/mpl_license"
            android:title="@string/app_name"
            app:icon="@drawable/ic_library">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.mozilla.org/MPL/2.0/">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

        <Preference
            android:summary="@string/apache"
            android:title="@string/android_open_source_project"
            app:icon="@drawable/ic_library">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.apache.org/licenses/LICENSE-2.0">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

        <Preference
            android:summary="@string/license_gnu"
            android:title="@string/ad_server_list"
            app:icon="@drawable/ic_library">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.gnu.org/licenses/lgpl-3.0.html">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

        <Preference
            android:summary="@string/license_gnu"
            android:title="@string/library_netcipher"
            app:icon="@drawable/ic_library">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.gnu.org/licenses/lgpl-3.0.html">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

        <Preference
            android:summary="@string/mit_license"
            android:title="@string/jsoup"
            app:icon="@drawable/ic_library">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jsoup.org/license">
                <extra
                    android:name="SOURCE"
                    android:value="SELF" />
            </intent>

        </Preference>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
