<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/bookmark_settings">

        <Preference
            android:key="import_bookmark"
            android:title="@string/import_backup"
            app:icon="@drawable/ic_file_import"/>

        <Preference
            android:key="export_bookmark"
            android:title="@string/export_bookmarks"
            app:icon="@drawable/ic_file_export"/>

        <Preference
            android:key="delete_bookmarks"
            android:title="@string/action_delete_all_bookmarks"
            app:icon="@drawable/ic_restore_page"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
