<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height_portrait"
    android:orientation="horizontal"
    android:layout_marginRight="5dp"
    android:animateLayoutChanges="true">

    <include layout="@layout/search" />

    <ImageButton
        android:id="@+id/button_reload"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/action_reload"
        app:tooltipText="@{`action_reload`}"
        app:srcCompat="@drawable/ic_action_refresh"
        android:nextFocusDown="@id/web_view" />

    <ImageButton
        android:id="@+id/button_action_back"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/action_back"
        app:tooltipText="@{`action_back`}"
        app:srcCompat="@drawable/ic_action_back" />

    <ImageButton
        android:id="@+id/button_action_forward"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/action_forward"
        app:tooltipText="@{`action_forward`}"
        app:srcCompat="@drawable/ic_action_forward" />

    <ImageButton
        android:id="@+id/home_button"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/home"
        app:tooltipText="@{`home`}"
        app:srcCompat="@drawable/ic_action_home"
        android:nextFocusDown="@id/web_view"
        />

    <com.jamal2367.styx.icon.TabCountView
        android:id="@+id/tabs_button"
        style="?android:attr/actionButtonStyle"
        android:layout_width="@dimen/material_grid_touch_medium"
        android:layout_height="@dimen/material_grid_touch_medium"
        android:layout_gravity="center"
        app:tabIconBorderRadius="3dp"
        app:tabIconBorderWidth="2dp"
        app:tabIconColor="?attr/iconColor"
        app:tabIconTextSize="10dp"
        android:contentDescription="@string/tabs"
        app:tooltipText="@{`tabs`}"
        android:nextFocusDown="@id/web_view"
        />

    <ImageButton
        android:id="@+id/button_more"
        style="?android:attr/actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_more_vertical"
        android:contentDescription="@string/action_more"
        app:tooltipText="@{`action_more`}"
        android:nextFocusDown="@id/web_view"
        />

</LinearLayout>

</layout>